--- a/src/styles/sass/page/_signup.scss
+++ b/src/styles/sass/page/_signup.scss
@@ -1,5 +1,5 @@
 .signup-page {
-    @include setHeight();
+    @extend %setHeight;
     .signup {
         position: relative;
         width: 100%;
