--- a/src/styles/sass/page/_verify.scss
+++ b/src/styles/sass/page/_verify.scss
@@ -1,4 +1,9 @@
 .verify-page {
+    @extend %setHeight;
+    overflow: auto;
+    @include mq("laptop", max) {
+        height: 100%;
+    }
     .step {
         &-bar {
             display: flex;
@@ -6,11 +11,14 @@
             justify-content: space-between;
             align-items: center;
             max-width: 500px;
-            width: 100%;
-            height: 3.5px;
+            width: 65%;
+            height: 3px;
             margin: 0 auto;
-            margin-bottom: 80px;
+            margin-bottom: 95px;
             background-color: white;
+            @include mq("phone", max) {
+                margin-bottom: 75px;
+            }
         }
         &-progress {
             position: absolute;
@@ -21,8 +29,8 @@
     }
     .left-circle,
     .right-circle {
-        width: 15px;
-        height: 15px;
+        width: 12px;
+        height: 12px;
         border-radius: 50%;
         position: relative;
         &::before {
@@ -48,6 +56,9 @@
         font-size: 20px;
         line-height: 30px;
         text-transform: uppercase;
+        @include mq("phone", max) {
+            font-size: 18px;
+        }
     }
     .verify {
         &-step0 {
@@ -57,10 +68,17 @@
                 margin-top: 60px;
                 font-size: 18px;
                 line-height: 30px;
+                @include mq("phone", max) {
+                    margin-top: 40px;
+                    font-size: 14px;
+                }
             }
             .form {
                 &-group {
                     margin-top: 72px;
+                    @include mq("phone", max) {
+                        margin-top: 24px;
+                    }
                 }
                 &-check {
                     display: flex;
@@ -77,7 +95,7 @@
                         font-size: 18px;
                         line-height: 30px;
                         @include mq("phone", max) {
-                            font-size: 14px;
+                            font-size: 13px;
                         }
                     }
                 }
@@ -88,20 +106,276 @@
             margin: 0 auto;
             .css-1s2u09g-control {
                 border-radius: unset;
+                .css-319lph-ValueContainer {
+                    @include mq("phone", max) {
+                        padding: 8px;
+                    }
+                }
+            }
+        }
+        &-step2 {
+            .upload {
+                &-doc {
+                    @include mq("phone", max) {
+                        display: none;
+                    }
+                    .file-upload {
+                        display: flex;
+                        flex-direction: column;
+                        align-items: center;
+                        justify-content: center;
+                        border: 1px dashed #828282;
+                        height: 100%;
+                        @include mq("phone") {
+                            padding: 55px 90px;
+                        }
+                        .new-doc {
+                            display: flex;
+                            align-items: center;
+                            justify-content: center;
+                            background-color: #474747;
+                            width: 86px;
+                            height: 86px;
+                            border-radius: 50%;
+                        }
+                        &.uploaded {
+                            padding-top: 33px;
+                            padding-bottom: 33px;
+                            .new-doc {
+                                display: none;
+                            }
+                            .file-browse {
+                                margin: 0;
+                            }
+                        }
+                        .file-browse {
+                            margin-top: 30px;
+                            span {
+                                color: $green;
+                                cursor: pointer;
+                                &:hover {
+                                    text-decoration: underline;
+                                }
+                            }
+                        }
+                    }
+                    .file-list {
+                        text-align: center;
+                    }
+                }
+                &-rule {
+                    p,
+                    li,
+                    strong {
+                        font-size: 16px;
+                        line-height: 30px;
+                        color: #fbfbfb;
+                    }
+                    ul {
+                        list-style: disc;
+                        list-style-position: inside;
+                        text-indent: 10px;
+                        li {
+                            &::marker {
+                                font-size: 10px;
+                                vertical-align: middle;
+                            }
+                        }
+                    }
+                    p,
+                    ul {
+                        padding: 0 16px;
+                    }
+                    &__img {
+                        display: flex;
+                        @include mq("phone", max) {
+                            justify-content: space-between;
+                        }
+                        @include mq("tablet", max) {
+                            img {
+                                width: 30%;
+                            }
+                        }
+                    }
+                }
+            }
+            .uploaded-list {
+                display: none;
+                &__text {
+                    text-align: center;
+                    margin-bottom: 11.5px 0;
+                    font-size: 16px;
+                    line-height: 29px;
+                    color: #fbfbfb;
+                }
+                .file-list {
+                    margin: 8px 0;
+                }
+                .btn-add {
+                    padding: 20px;
+                    margin-bottom: 16px;
+                    width: 100%;
+                    font-size: 16px;
+                    line-height: 39px;
+                    color: #e8e8e8;
+                    background: #292929;
+                    border: unset;
+                    span {
+                        position: relative;
+                        &::before,
+                        &::after {
+                            content: "";
+                            position: absolute;
+                            box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.1);
+                            background: white;
+                            top: 50%;
+                            transform: translateY(-50%);
+                        }
+                        &::before {
+                            width: 14px;
+                            height: 1px;
+                            left: -30px;
+                        }
+                        &::after {
+                            width: 1px;
+                            height: 14px;
+                            left: -23px;
+                        }
+                    }
+                }
+                @include mq("phone", max) {
+                    display: block;
+                    width: 100%;
+                }
+            }
+            .file-list {
+                margin-top: 50px;
+                display: flex;
+                justify-content: space-around;
+                @include mq("phone", max) {
+                    display: block;
+                }
+                .file-item {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    @include mq("phone") {
+                        text-align: center;
+                    }
+                    @include mq("phone", max) {
+                        margin-bottom: 14px;
+                    }
+                    &__info {
+                        position: relative;
+                        padding: 22px 0 16px;
+                        width: 80px;
+                        background: rgba(62, 62, 62, 0.3);
+                        @include mq("phone", max) {
+                            display: flex;
+                            justify-content: space-between;
+                            align-items: center;
+                            padding: 18px 25px;
+                            width: 100%;
+                            & > div {
+                                display: flex;
+                                align-items: center;
+                                img {
+                                    margin-bottom: 0 !important;
+                                    height: 100%;
+                                }
+                                div {
+                                    margin-left: 24px;
+                                }
+                            }
+                        }
+                        .remove-file {
+                            position: absolute;
+                            top: -10.5px;
+                            right: -10.5px;
+                            width: 21px;
+                            height: 21px;
+                            background: #c4c4c4;
+                            border-radius: 50%;
+                            cursor: pointer;
+                            @include mq("phone", max) {
+                                position: relative;
+                                top: 0;
+                                right: 0;
+                                background-color: unset;
+                            }
+                            span {
+                                position: relative;
+                                &::before,
+                                &::after {
+                                    content: "";
+                                    position: absolute;
+                                    top: 10px;
+                                    width: 13px;
+                                    height: 1px;
+                                    background-color: black;
+                                    box-shadow: 0px 0.870469px 0.870469px rgba(0, 0, 0, 0.1);
+                                    @include mq("phone", max) {
+                                        width: 14px;
+                                        background-color: white;
+                                        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.1);
+                                    }
+                                }
+                                &::before {
+                                    left: -6.5px;
+                                    transform: rotate(45deg);
+                                    @include mq("phone", max) {
+                                        left: unset;
+                                    }
+                                }
+                                &::after {
+                                    right: -6.5px;
+                                    transform: rotate(-45deg);
+                                    @include mq("phone", max) {
+                                        right: unset;
+                                    }
+                                }
+                            }
+                        }
+                        .file-name {
+                            display: none;
+                            @include mq("phone", max) {
+                                display: block;
+                            }
+                        }
+                        .file-size {
+                            color: #626262;
+                        }
+                    }
+                    &__name {
+                        margin-top: 8px;
+                        @include mq("phone", max) {
+                            display: none;
+                        }
+                    }
+                }
             }
         }
     }
     .btn-link {
         margin-top: 50px;
+        @include mq("phone", max) {
+            display: none;
+        }
     }
     .btn-group {
         display: flex;
         justify-content: center;
-        margin-top: 37px;
+        margin: 50px 0;
         .btn-primary {
             padding: 14px 60px;
             font-size: 20px;
             line-height: 24px;
+            @include mq("phone", max) {
+                padding: 10px 40px;
+                font-size: 15.3647px;
+                font-weight: bold;
+                line-height: 19px;
+            }
         }
     }
 }
