--- a/src/styles/sass/utils/_mixins.scss
+++ b/src/styles/sass/utils/_mixins.scss
@@ -12,12 +12,11 @@
 
 %setHeight {
     overflow: hidden;
-    height: calc(100vh - 97px);
+    height: 100vh;
     min-height: auto;
     width: 100vw;
     @include mq("tablet", max) {
         overflow: auto;
-        height: calc(100vh - 57px);
         position: relative;
     }
 }
