--- a/src/pages/purchase/home/style.scss
+++ b/src/pages/purchase/home/style.scss
@@ -3,7 +3,7 @@ main.purchase-page {
         height: 80vh;
         display: flex;
         align-items: center;
-        @media screen and (max-width: 584px) {
+        @media screen and (max-width: 768px) {
             height: 100vh;
         }
         div.container {
@@ -38,6 +38,8 @@ main.purchase-page {
                         font-weight: 700;
                     }
                     @media screen and (max-width: 1480px) {
+                        padding: 0 20px;
+
                         h4.title1 {
                             font-size: 36px;
                         }
@@ -53,17 +55,17 @@ main.purchase-page {
                             font-size: 22px;
                         }
                     }
-                    @media screen and (max-width: 584px) {
+                    @media screen and (max-width: 768px) {
+                        text-align: center;
                         h4.title1 {
                             font-size: 16px;
                         }
                         h3.title2 {
                             font-size: 20px;
-                            margin-left: 10vw;
+                            margin: 5px;
                         }
                         p.text {
                             font-size: 12px;
-                            margin: 0;
                         }
                         button.btn-green {
                             margin-top: 20px;
