--- a/src/styles/sass/utils/_variables.scss
+++ b/src/styles/sass/utils/_variables.scss
@@ -3,6 +3,7 @@ $black: #1e1e1e;
 $green: #23c865;
 $grey: #c4c4c4;
 $red: #f7361a;
+$light-red: #ff6868;
 $cyan: #59d8f3;
 
 // Media query breakpoints
