--- a/src/pages/purchase/auction/style.scss
+++ b/src/pages/purchase/auction/style.scss
@@ -14,6 +14,9 @@ main.purchaseAuction-page {
                     td.quantity {
                         text-align: center;
                     }
+                    @media screen and (max-width: 768px) {
+                        line-height: 30px;
+                    }
                 }
             }
         }
