--- a/src/pages/purchase/auction/style.scss
+++ b/src/pages/purchase/auction/style.scss
@@ -22,3 +22,62 @@ main.purchaseAuction-page {
         }
     }
 }
+.signVerify-modal {
+    position: relative;
+    width: 750px;
+    height: 446px;
+    padding: 110px 140px;
+    display: flex;
+    flex-direction: column;
+    span.close {
+        position: absolute;
+        top: 27px;
+        right: 34px;
+    }
+    @media screen and (max-width: 768px) {
+        width: calc(100% - 24px);
+        padding: 40px;
+        height: auto;
+        span.close {
+            top: 15px;
+            right: 15px;
+        }
+    }
+    p.description {
+        text-align: center;
+        font-size: 18px;
+        font-weight: 700;
+        margin-bottom: 20px;
+        height: 135px;
+        @media screen and (max-width: 768px) {
+            font-size: 14px;
+            height: auto;
+        }
+    }
+    .btnDiv {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        @media screen and (max-width: 768px) {
+            flex-direction: column;
+        }
+        a {
+            margin: 10px 15px;
+        }
+        p {
+            width: 191.79px;
+            height: 53px;
+            line-height: 53px;
+            text-align: center;
+            font-weight: 700;
+            font-size: 26px;
+            text-transform: uppercase;
+            &.blackbtn {
+                border: 1px solid #ffffff;
+            }
+            &.greenbtn {
+                background-color: #23c865;
+            }
+        }
+    }
+}
