purchase pages almost

--- a/src/styles/sass/page/purchase/homeWithSign.scss
+++ b/src/styles/sass/page/purchase/homeWithSign.scss
@@ -10,7 +10,7 @@ main.purchaseWithSign-page {
         top:-20%;
         left: 30%;
         transform: rotate(-15deg);
-        background-image: url("./../../../images/hero1.png");
+        background-image: url("/images/hero1.png");
         background-size: contain;
         opacity: 0.4;
         @media screen and (max-width: 1400px) {
