--- a/src/styles/sass/app.scss
+++ b/src/styles/sass/app.scss
@@ -19,3 +19,7 @@
 @import "page/history";
 @import "page/profile";
 @import "page/verify";
+@import "page/purchase/auction.scss";
+@import "page/purchase/home.scss";
+@import "page/purchase/homeWithSign.scss";
+@import "page/purchase/payment.scss";
