--- a/src/styles/sass/page/purchase/home.scss
+++ b/src/styles/sass/page/purchase/home.scss
@@ -81,7 +81,7 @@ main.purchase-page {
                         padding-top: 90%;
                         background-image:
                         linear-gradient(282.88deg, #1E1E1E 28.38%, rgba(30, 30, 30, 0.81) 44.4%, rgba(30, 30, 30, 0.35) 62.26%, rgba(30, 30, 30, 0) 78.81%),
-                            url("./../../../images/hero3.png");
+                            url("/images/hero3.png");
                             background-repeat: no-repeat;
                             background-size: contain;
                         img {
