--- a/src/styles/sass/page/purchase/payment.scss
+++ b/src/styles/sass/page/purchase/payment.scss
@@ -120,6 +120,12 @@
                 margin-right: 8px;
                 height: calc(100% - 8px);
             }
+            .btn-primary {
+                font-size: 24px;
+                padding: 7px;
+                margin-top: 8px;
+                width: 340px;
+            }
             .clipboard {
                 display: flex;
                 align-items: center;
@@ -127,6 +133,7 @@
                 background-color: white;
                 padding: 13px;
                 cursor: pointer;
+                margin-top: 8px;
                 code {
                     font-family: "Montserrat";
                     font-size: 16px;
@@ -246,18 +253,23 @@
     .order-summary {
         border-left: 1px solid white;
         padding-left: 24px;
+        & > h3 {
+            font-weight: 600;
+            font-size: 36px;
+            line-height: 29px;
+            margin-bottom: 100px;
+        }
+        & > p {
+            font-size: 12px;
+            line-height: 15px;
+        }
         @include mq("tablet", max) {
             border: none;
             padding-left: 12px;
             margin-top: 32px;
             & > h3 {
-                font-weight: 600;
                 font-size: 24px;
-                line-height: 29px;
-            }
-            & > p {
-                font-size: 12px;
-                line-height: 15px;
+                margin-bottom: 20px;
             }
             .btn-primary {
                 width: 100%;
