--- a/src/styles/sass/page/_signup.scss
+++ b/src/styles/sass/page/_signup.scss
@@ -78,6 +78,7 @@
                     background-color: $black;
                     border: 1px solid white;
                     border-radius: unset;
+                    margin-top: 0;
                 }
                 &-label {
                     font-weight: 500;
