--- a/src/styles/sass/page/_auction.scss
+++ b/src/styles/sass/page/_auction.scss
@@ -5,11 +5,11 @@
         border-bottom: 2px solid #464646;
     }
     .section-auction {
-        display: flex;
+        // display: flex;
         width: 100%;
         height: 100%;
         .auction-left {
-            width: 35%;
+            // width: 35%;
             padding-right: 50px;
             @include mq("phone", max) {
                 width: 100%;
@@ -129,7 +129,7 @@
             }
         }
         .auction-right {
-            width: 65%;
+            // width: 65%;
             border-left: 2px solid #464646;
             @include mq("phone", max) {
                 display: none;
