--- a/src/styles/sass/page/_home.scss
+++ b/src/styles/sass/page/_home.scss
@@ -8,82 +8,52 @@
         width: 100%;
         opacity: 0.4;
     }
-    .home {
-        align-items: flex-start;
-        &-section {
-            @extend %setHeight2;
-        }
-        &-title {
-            text-transform: uppercase;
-        }
-        &-text {
-            margin-top: 73px;
-            text-transform: uppercase;
-            font-size: 27px;
-            line-height: 33px;
-            letter-spacing: 0.04em;
-            @include mq("phone", max) {
-                margin-top: 25px;
-                font-size: 18px;
-                line-height: 24px;
-            }
-        }
-    }
-    .home2 {
+    .home-section {
+        @extend %setHeight2;
         display: flex;
         align-items: center;
         text-align: center;
-        &-header {
-            @include mq("laptop", max) {
-                font-size: 40px;
+
+        .home-title {
+            font-weight: bold;
+            font-size: 48px;
+            line-height: 59px;
+            text-transform: uppercase;
+            @include mq("tablet", max) {
+                font-size: 38px;
+                line-height: 46px;
             }
-            @include mq("phone", max) {
-                margin-top: 8px;
+        }
+        .token {
+            &-left {
                 font-weight: bold;
-                font-size: 24px;
-                line-height: 29px;
-                text-transform: uppercase;
+                font-size: 36px;
+                line-height: 44px;
+                text-align: left;
+                @include mq("tablet", max) {
+                    font-size: 28px;
+                    line-height: 35px;
+                }
+            }
+            &-value {
+                font-weight: 600;
+                font-size: 100px;
+                line-height: 122px;
+                text-align: left;
+                letter-spacing: 0.03em;
+                @include mq("tablet", max) {
+                    font-size: 78px;
+                    line-height: 96px;
+                }
             }
         }
         .btn-green {
             padding: 8px 52px;
             margin: 50px 0 24px;
+            border-radius: unset;
             @include mq("phone", max) {
                 margin: 20px 0 5px;
             }
-        }
-    }
-    .home3 {
-        @include mq("phone", max) {
-            padding-top: 30px;
-        }
-        &-title {
-            font-weight: 600;
-            font-size: 41px;
-            line-height: 70px;
-            letter-spacing: 0.02em;
-            @include mq("laptop", max) {
-                font-size: 33px;
-            }
-            @include mq("phone", max) {
-                font-size: 24px;
-                line-height: 29px;
-            }
-        }
-        &-text {
-            font-weight: bold;
-            font-size: 64px;
-            line-height: 72px;
-            @include mq("laptop", max) {
-                font-size: 45px;
-            }
-            @include mq("phone", max) {
-                font-size: 36px;
-                line-height: 42px;
-            }
-        }
-        .hero-image {
-            opacity: 1;
         }
     }
 }
@@ -95,27 +65,24 @@
         text-align: center;
         .time {
             font-weight: 600;
-            font-size: 123px;
-            line-height: 176px;
-            letter-spacing: -0.02em;
+            font-size: 48px;
+            line-height: 59px;
+            letter-spacing: 0.03em;
             color: white;
-            @include mq("laptop", max) {
-                font-size: 80px;
-            }
-            @include mq("phone", max) {
-                font-size: 50px;
-                line-height: 88px;
+            @include mq("tablet", max) {
+                font-size: 37.8092px;
+                line-height: 46px;
             }
             &-text {
-                font-weight: 500;
-                font-size: 36px;
-                line-height: 44px;
-                letter-spacing: -0.02em;
                 color: white;
+                font-weight: 500;
+                font-size: 16px;
+                line-height: 19px;
+                letter-spacing: -0.02em;
                 text-transform: uppercase;
-                @include mq("phone", max) {
-                    font-size: 17.5462px;
-                    line-height: 21px;
+                @include mq("tablet", max) {
+                    font-size: 12px;
+                    line-height: 15px;
                 }
             }
         }
