--- a/src/styles/sass/page/_profile.scss
+++ b/src/styles/sass/page/_profile.scss
@@ -1,13 +1,25 @@
 .profile-page {
+    // section > div {
+    //     @include mq("laptop") {
+    //         height: 100%;
+    //     }
+    //     @media screen and (max-height: 745px) {
+    //         height: auto;
+    //     }
+    // }
     &__left {
         padding: 8px 32px;
         border-right: 1px solid #ffffff;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+        max-height: 507px;
         .user-info {
             margin: 48px 0 105px;
             text-align: center;
+            @include mq("laptop", max) {
+                margin: 24px 0;
+            }
             @include mq("phone", max) {
                 margin: 48px 0;
             }
@@ -16,7 +28,7 @@
                 height: 93.17px;
             }
             &__name {
-                margin-top: 32px;
+                margin-top: 24px;
                 font-weight: 600;
                 font-size: 24px;
                 line-height: 23px;
@@ -27,7 +39,7 @@
             padding-left: 12px;
             padding-right: 12px;
         }
-        @include mq("tablet", max) {
+        @include mq("laptop", max) {
             border: unset;
         }
         .profile-tab {
@@ -50,13 +62,15 @@
                     display: flex;
                     flex-direction: column;
                     border: unset;
-                    @include mq("tablet", max) {
+                    @include mq("laptop", max) {
                         display: none;
                     }
                 }
             }
             &__select {
                 display: none;
+                width: 300px;
+                margin: 0 auto;
                 .css-1s2u09g-control,
                 .css-1pahdxg-control {
                     @extend %selectStyle;
@@ -83,7 +97,7 @@
                 .css-6j8wv5-Input {
                     display: none;
                 }
-                @include mq("tablet", max) {
+                @include mq("laptop", max) {
                     display: block;
                 }
             }
@@ -93,10 +107,11 @@
         }
     }
     &__right {
-        padding: 16px 32px;
+        padding: 0 32px;
         @include mq("phone", max) {
             padding-left: 12px;
             padding-right: 12px;
+            padding-bottom: 50px;
         }
         h4 {
             font-weight: bold;
@@ -117,6 +132,11 @@
                 border-bottom: 2px solid #464646;
                 padding-bottom: 15px;
                 margin-bottom: 0;
+                @include mq("phone", max) {
+                    padding-top: 35px;
+                    padding-left: 0;
+                    padding-right: 0;
+                }
             }
             .account-detail {
                 .row {
@@ -130,6 +150,13 @@
                         color: white;
                         text-transform: uppercase;
                         padding: 25px 12px;
+                        @include mq("phone", max) {
+                            font-size: 16px;
+                            font-weight: normal;
+                            line-height: 19.5px;
+                            padding-left: 0;
+                            padding-right: 0;
+                        }
                         .btn-primary {
                             font-weight: bold;
                             font-size: 18px;
@@ -151,6 +178,10 @@
                         align-items: center;
                         @include mq("tablet", max) {
                             padding: 25px 12px;
+                        }
+                        @include mq("phone", max) {
+                            padding-left: 0;
+                            padding-right: 0;
                         }
                     }
                 }
@@ -176,7 +207,10 @@
                         display: flex;
                         align-items: center;
                         border-bottom: 2px solid #464646;
-
+                        @include mq("phone", max) {
+                            padding-left: 0;
+                            padding-right: 0;
+                        }
                         .security-item {
                             margin-left: 12px;
                             display: flex;
@@ -204,6 +238,9 @@
             }
         }
         .notification-set {
+            @include mq("phone", max) {
+                margin-top: 35px;
+            }
             .notification-tab {
                 .react-tabs__tab {
                     font-weight: bold;
@@ -227,6 +264,10 @@
                     align-items: center;
                     padding: 20px 16px;
                     border-bottom: 2px solid #464646;
+                    @include mq("phone", max) {
+                        padding-left: 0;
+                        padding-right: 0;
+                    }
                 }
                 .recent-item {
                     p {
@@ -260,10 +301,13 @@
                 padding-bottom: 16px;
                 border-bottom: 2px solid #464646;
                 text-align: left;
+                @include mq("phone", max) {
+                    padding-top: 35px;
+                }
             }
             .row {
                 margin-top: 85px;
-                @include mq("phone", max) {
+                @include mq("laptop", max) {
                     margin-top: 24px;
                 }
             }
@@ -274,8 +318,8 @@
                 cursor: pointer;
                 width: 100%;
                 height: 100%;
-                padding-top: 25px;
-                padding-bottom: 25px;
+                padding-top: 20px;
+                padding-bottom: 20px;
                 border: 2px solid #525252;
                 img {
                     margin-bottom: 16px;
@@ -296,9 +340,11 @@
                 font-size: 24px;
                 line-height: 29px;
                 padding: 7px 92px;
+                @include mq("laptop", max) {
+                    margin-top: 24px;
+                }
                 @include mq("phone", max) {
                     width: 100%;
-                    margin-top: 24px;
                 }
             }
         }
@@ -309,6 +355,9 @@
                 padding-bottom: 16px;
                 border-bottom: 2px solid #464646;
                 text-align: left;
+                @include mq("laptop", max) {
+                    margin-top: 16px;
+                }
             }
             p {
                 font-weight: bold;
