--- a/src/styles/sass/utils/_mixins.scss
+++ b/src/styles/sass/utils/_mixins.scss
@@ -21,9 +21,9 @@
 }
 
 %setHeight2 {
-    height: calc(100% - 97px);
+    height: calc(100vh - 97px);
     @include mq("phone", max) {
-        height: calc(100% - 57px);
+        height: calc(100vh - 57px);
     }
 }
 
