--- a/src/styles/sass/page/_payment.scss
+++ b/src/styles/sass/page/_payment.scss
@@ -290,6 +290,7 @@
         }
     }
     .remain-token__value {
+        padding: 0px 60px;
         margin-top: 80px;
         .current-value,
         .end-value {
@@ -319,4 +320,12 @@
             }
         }
     }
+}
+
+.allow-text {
+    font-size: 11px !important;
+    font-weight: bold;
+    text-transform: uppercase;
+    margin-top: auto;
+    margin-bottom: auto;
 }
