--- a/src/styles/sass/base/_reset.scss
+++ b/src/styles/sass/base/_reset.scss
@@ -9,16 +9,19 @@
 }
 
 .timeframe-bar {
+    position: relative;
     width: 100%;
     margin: 0 auto;
     margin-top: 24px;
     height: 12px;
-    background-color: #464646;
+    background-color: #263a2b;
     .timeleft {
+        position: absolute;
+        right: 0;
         height: 100%;
-        text-align: right;
-        line-height: 12px;
         width: 0;
+        cursor: pointer;
+        line-height: 12px;
         box-sizing: border-box;
     }
 }
