--- a/src/styles/sass/page/_signup.scss
+++ b/src/styles/sass/page/_signup.scss
@@ -27,11 +27,17 @@
         &-link {
             font-size: 16px;
             line-height: 23px;
-            font-weight: 800;
+            font-weight: 600;
             color: white;
             &:hover {
                 text-decoration: underline;
             }
+        }
+        &-text-link {
+            color: white;
+            font-size: 14px;
+            opacity: 0.95;
+            line-height: 23px;
         }
         .terms-link:hover {
             color: #0d6efd;
