--- a/src/styles/sass/page/_payment.scss
+++ b/src/styles/sass/page/_payment.scss
@@ -25,8 +25,8 @@
             @include mq("tablet", max) {
                 display: none;
             }
-            // display: flex;
-            // justify-content: space-between;
+            display: flex;
+            justify-content: space-between;
             border: none;
             margin-bottom: 55px;
         }
