--- a/src/styles/sass/page/_payment.scss
+++ b/src/styles/sass/page/_payment.scss
@@ -1,12 +1,24 @@
 .payment-page {
     & > section {
         .title {
+            color: white;
+            font-style: normal;
+            font-weight: bold;
+            font-size: 36px;
+            line-height: 60px;
             @include mq("tablet", max) {
                 font-size: 24px;
             }
         }
         .sub-title {
-            font-size: 14px;
+            color: white;
+            font-style: normal;
+            font-weight: normal;
+            font-size: 18px;
+            line-height: 23px;
+            text-align: center;
+            font-weight: 300;
+            opacity: 0.95;
         }
     }
     .payment-expire {
@@ -73,6 +85,9 @@
                 font-size: 16px;
                 line-height: 20px;
                 padding: 12px 16px;
+                &:focus {
+                    outline: none;
+                }
             }
             .form-check {
                 display: flex;
