--- a/src/styles/sass/page/_payment.scss
+++ b/src/styles/sass/page/_payment.scss
@@ -48,6 +48,9 @@
             line-height: 29px;
             padding: 8px 30px;
             border: 1px solid white;
+            &[aria-selected="false"] {
+                color: rgba(255, 255, 255, 0.5);
+            }
             text-transform: uppercase;
             cursor: pointer;
             @include mq("laptop-wide", max) {
@@ -352,4 +355,7 @@
 }
 .css-1s2u09g-control {
     padding: 0px 4px !important;
+}
+
+.payment-type__tab-list {
 }
