Payment / Options / Changed the sizings based on the figma design

--- a/src/styles/sass/page/_payment.scss
+++ b/src/styles/sass/page/_payment.scss
@@ -355,4 +355,9 @@
 }
 
 .payment-type__tab-list {
+    flex: 1 !important;
+    margin-right: 15px;
+    &:last-child {
+        margin-right: 0px;
+    }
 }
