--- a/src/styles/sass/base/_base.scss
+++ b/src/styles/sass/base/_base.scss
@@ -33,3 +33,9 @@ input[type="number"]::-webkit-outer-spin-button {
     -webkit-appearance: none;
     margin: 0;
 }
+.z-999 {
+    z-index: 999 !important;
+}
+.z-n999 {
+    z-index: -999 !important;
+}
