--- a/src/styles/sass/page/_payment.scss
+++ b/src/styles/sass/page/_payment.scss
@@ -93,6 +93,12 @@
                 display: flex;
                 align-items: center;
             }
+            input {
+                &::placeholder {
+                    color: white;
+                    opacity: 0.95;
+                }
+            }
         }
         .cryptocoin-tab,
         .wallet-tab {
