Payment / NDB WALLET / Fixed the dropddown menu issue

--- a/src/styles/sass/page/_payment.scss
+++ b/src/styles/sass/page/_payment.scss
@@ -375,3 +375,9 @@
 .css-qc6sy-singleValue {
     margin: auto !important;
 }
+.css-14el2xx-placeholder {
+    color: white;
+    font-size: 18px;
+    margin-top: 0px;
+    text-align: center;
+}
